<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/dark"
    tools:context="com.example.softwarecontrolleddrone.RegisterActivity">

    <TextView
        android:id="@+id/registerUserTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registerUserTVText"
        android:textColor="@color/bright"
        android:layout_marginTop="32dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/registerUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/bright"
        android:hint="@string/hint1"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:layout_alignTop="@+id/registerUserTV"
        android:layout_toEndOf="@+id/registerUserTV" />

    <TextView
        android:id="@+id/registerPassTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registerPassTVText"
        android:textColor="@color/bright"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/registerUsername"
        android:layout_toStartOf="@+id/registerUsername" />

    <EditText
        android:id="@+id/registerPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/bright"
        android:hint="@string/hint2"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:layout_alignTop="@+id/registerPassTV"
        android:layout_toEndOf="@+id/registerFnameTV" />

    <TextView
        android:id="@+id/registerFnameTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registerFnameTVText"
        android:textColor="@color/bright"
        android:layout_marginTop="51dp"
        android:layout_below="@+id/registerPassword"
        android:layout_alignStart="@+id/registerPassTV" />

    <EditText
        android:id="@+id/registerFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/bright"
        android:hint="@string/hint3"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:layout_alignTop="@+id/registerFnameTV"
        android:layout_alignStart="@+id/registerPassword" />

    <TextView
        android:id="@+id/registerLnameTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registerLnameTVText"
        android:textColor="@color/bright"
        android:layout_below="@+id/registerFirstName"
        android:layout_alignStart="@+id/registerFnameTV"
        android:layout_marginTop="42dp" />

    <EditText
        android:id="@+id/registerLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/bright"
        android:hint="@string/hint4"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:layout_alignTop="@+id/registerLnameTV"
        android:layout_toEndOf="@+id/registerLnameTV" />

    <Button
        android:id="@+id/registerButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registerText2"
        android:textColor="@drawable/select_text_button"
        android:background="@drawable/buttonshape"
        android:layout_marginBottom="44dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
