<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/dark"
    tools:context=".LoginActivity">


    <EditText
        android:id="@+id/usernameField"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:textColor="@color/bright"
        android:gravity="center"
        android:layout_marginTop="40dp"
        android:hint="@string/hint1"
        android:inputType="text"
        android:imeOptions="actionNext"
        android:layout_centerHorizontal="true"
        android:background="@drawable/edit_text_box"/>

    <EditText
        android:id="@+id/passwordField"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:textColor="@color/bright"
        android:gravity="center"
        android:hint="@string/hint2"
        android:inputType="textPassword"
        android:layout_marginTop="20dp"
        android:layout_below="@id/usernameField"
        android:layout_centerHorizontal="true"
        android:background="@drawable/edit_text_box"/>

    <CheckBox
        android:id="@+id/rememberMeCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkBoxText"
        android:textColor="@color/white"
        android:buttonTint="@color/white"
        android:layout_below="@+id/passwordField"
        android:layout_alignStart="@+id/passwordField"/>

    <Button
        android:id="@+id/loginButton"
        android:text="@string/loginText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@drawable/select_text_button"
        android:textSize="30sp"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/buttonshape"
        android:layout_below="@id/passwordField"/>

    <Button
        android:id="@+id/registerButton"
        android:text="@string/registerText1"
        android:textColor="@drawable/select_text_button"
        android:textSize="30sp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginButton"
        android:layout_marginTop="24dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/buttonshape"
        android:onClick="RegisterAccount"/>

</RelativeLayout>
