<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/getFlightDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/getFlightDurationText"
        android:textColor="@color/bright"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/displayFlightDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/displayFlightDurationText"
        android:textColor="@color/white"
        android:layout_below="@+id/getFlightDuration"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/getDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/getDateText"
        android:textColor="@color/bright"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/displayDate" />

    <TextView
        android:id="@+id/displayDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/displayDate"
        android:textColor="@color/white"
        android:layout_marginStart="71dp"
        android:layout_below="@+id/getDate"
        android:layout_toEndOf="@+id/displayFlightDuration" />

    <TextView
        android:id="@+id/getLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/displayFlightDuration"
        android:text="@string/getLocationText"
        android:textColor="@color/bright"/>

    <TextView
        android:id="@+id/displayLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/getLocation"
        android:textColor="@color/white"/>
<!--
    <TextView
        android:id="@+id/displayLatitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/getLatitude"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/getLongitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/displayLatitude"
        android:text="@string/getLongitudeText"
        android:textColor="@color/bright"/>

    <TextView
        android:id="@+id/displayLongitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/getLongitude"
        android:textColor="@color/white"/>
        -->

</RelativeLayout>