<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/dark"
    tools:context="com.example.softwarecontrolleddrone.MenuActivity">

    <TextView
        android:id="@+id/logoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/bright"
        android:textSize="30sp"
        android:shadowColor="@color/white"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="25"
        android:layout_alignParentEnd="true"
        android:text="@string/logoutText"/>


    <ImageView
        android:id="@+id/dronePicture1"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="40dp"
        android:layout_below="@id/logoutButton"
        android:layout_centerHorizontal="true"
        android:src="@drawable/drone"/>

    <Button
        android:id="@+id/controllerButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/controllerButtonText"
        android:layout_marginTop="70dp"
        android:textColor="@color/white"
        android:layout_below="@id/dronePicture1"
        android:layout_centerHorizontal="true"
        android:background="@drawable/buttonshape"
        android:onClick="changeToController"/>

    <Button
        android:id="@+id/databaseButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/white"
        android:text="@string/databseButtonText"
        android:layout_marginTop="20dp"
        android:layout_below="@id/controllerButton"
        android:layout_centerHorizontal="true"
        android:background="@drawable/buttonshape"/>


</RelativeLayout>
</ScrollView>